--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
     <div class="main-content">
         {{>header}}
         <img class="portrait" src="/img/me.jpg">
+        <p>This site was created by Developer. It uses data from other websites</p>
     </div>    
     {{>footer}}
 </body>
